[package]
name = "ress"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.34.1", features = ["default_fonts", "persistence"] }
reqwest = { version = "0.13.2", features = ["blocking"] }
rss = "2.0.12"
env_logger = "0.11.10"
serde = { version = "1.0.228", features = ["derive"] }
ehttp = "0.7.1"

[profile.release]
opt-level = 2
